# rusty-submarine

./: Cargo.toml  LICENSE.txt  README.md  Rocket.toml  USAGE.md
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/rustacean/features/sccache/: devcontainer-feature.json  install.sh
.devcontainer/rustacean/features/sqlx-cli/: devcontainer-feature.json  install.sh
migrations/: 20230428203422_init.sql
src/: apikey.rs  main.rs
