[package]
name = "rusty-submarine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# async-std = "1.12.0"
# sqlx = "0.6.2"

[dependencies.rocket]
version = "0.5.0-rc.2"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
