[package]
name = "rusty-submarine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.0-rc.2"
# tls, mtls, http2, secrets, json, msgpack, uuid
features = [
    "http2",
    "json",
]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
]

[dependencies.sqlx]
version = "0.6.3"
features = [
    "json",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-native-tls",
    "time",
    "uuid",
]

[dependencies.tokio]
version = "1.28.0"
features = ["full"]
